--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 buildscript {
     ext {
-        compose_version = '1.1.0-beta01'
+        compose_version = '1.3.0-beta01'
+        retrofit_version = '2.9.0'
+        login_interceptor_version = '4.10.0'
+        coil_version = '2.2.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
